Replaces java.util.logging with sl4j. Solves #7